migdb.qvto/transforms/tests/validator_app/test_err_invalid_02_required.qvto
import builder_app;
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_02_required(out outModel : ERR);


main() {
	var errorMessage : String := "Structure contains ambigous property name \"name\" in"+
	" class \"Country\"";
	var error : Error := _validationError(errorMessage, "validator_app.qvto"); 
	_errorLog(OrderedSet{error});	 
}